Add list repository URLs API
