# api/openapi.json
@@ -822,6 +822,71 @@
                 ]
             }
         },
+        "/repositories/urls/": {
+            "get": {
+                "description": "list repositories URLs",
+                "operationId": "listRepositoriesURLs"
+            },
+            "responses": {
+                "200": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "description": "OK"
+                },
+                "400": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/errors.ErrorResponse"
+                            }
+                        }
+                    },
+                    "description": "Bad Request"
+                },
+                "401": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/errors.ErrorResponse"
+                            }
+                        }
+                    },
+                    "description": "Unauthorized"
+                },
+                "404": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/errors.ErrorResponse"
+                            }
+                        }
+                    },
+                    "description": "Not Found"
+                },
+                "500": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/errors.ErrorResponse"
+                            }
+                        }
+                    },
+                    "description": "Internal Server Error"
+                }
+            },
+            "summary": "List Repository URLs",
+            "tags": [
+                "repositories"
+            ]
+        },
         "/repositories/bulk_create/": {
             "post": {
                 "description": "bulk create repositories",
